# django-chromadb-viz

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
django_chromadb_viz/: __init__.py  apps.py  services.py  settings.py  urls.py
django_chromadb_viz/static/django_chromadb_viz/css/: dark-theme.css
django_chromadb_viz/templates/django_chromadb_viz/: base.html  error.html
django_chromadb_viz/templates/django_chromadb_viz/collections/: detail.html  list.html
django_chromadb_viz/templates/django_chromadb_viz/documents/: detail.html  search_results.html
django_chromadb_viz/views/: __init__.py  collections.py  documents.py
tests/: __init__.py  settings.py  test_services.py  test_settings.py
